<resources>
<<<<<<< HEAD
    <string name="app_name">Flash Alerts</string>
=======
    <string name="app_name">Flash Light</string>
>>>>>>> 60f676ca937c5aa0453a2918f1d3009a6b80c889
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="setting">Setting</string>
    <string name="installed_apps">Installed_Apps</string>
    <string name="flash_light">Flash Light</string>
    <string name="home">Home</string>
    <string name="incoming_call">Incoming call</string>
    <string name="on">ON</string>
    <string name="select_app">Select app</string>
    <string name="test">TEST</string>
    <string name="_50_ms">10ms</string>
    <string name="notification_and_sms">Notification and SMS</string>
    <string name="flashing_type">Flashing type</string>
    <string name="flash_speed">Flash speed</string>
<<<<<<< HEAD
=======
    <string name="continuous">Continuous</string>
>>>>>>> 60f676ca937c5aa0453a2918f1d3009a6b80c889
    <string name="shortcut">Shortcut</string>
    <string name="camera">Camera</string>
    <string name="screen">Screen</string>
    <string name="mode">Mode</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="turn_off_in_this_time">Turn off in this time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="battery_save">Battery saver</string>
    <string name="turn_off_if_battery_below">Turn off if battery below</string>
    <string name="disable_when_using_phone">Disable when using phone</string>
    <string name="enable_flash_in_alert_mode">Enable Flash in Alert Mode</string>
    <string name="normal_mode">✔ Normal Mode</string>
    <string name="vibrate_mode">✔ Vibrate Mode</string>
    <string name="silent_mode">✔ Silent Mode</string>
    <string name="apply">Apply</string>
    <string name="language">Change Language</string>
    <string name="english">English</string>
    <string name="next">Next</string>
    <string name="policy_url" translatable="false">https://sites.google.com/view/3devtechprivacypolicy</string>
    <string name="developer_account_link" translatable="false">3DevTech</string>
    <string name="skip">Skip</string>
    <string name="get_started">ابدأ</string> <!-- Arabic (ar) -->
    <string name="are_you_sure_you_want_to_exit_this_app">\nAre you Sure You want to exit this app</string>
    <string name="yes">Yes\n</string>
    <string name="no">No</string>
    <string name="Privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="feedback">FeedBack</string>
    <string name="More_Apps">More Apps</string>
    <string name="Exit_app">Exit App</string>
<<<<<<< HEAD

=======
    \
>>>>>>> 60f676ca937c5aa0453a2918f1d3009a6b80c889
    <string name="moreapp">More App</string>
    <string name="moreapp_des">You will be redirect to our play store account.\n Are your sure?</string>
    <string name="redirect">Redirect</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_des">You will be redirect to our play store account.\n Are you sure?</string>
    <string name="files">Files</string>
    <string name="rate_us_message">Please give your feedback about the application. We will consider your point of view at serious note.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacypolicy_Des">You will be redirected to the browser to open the privacy policy. Are you sure?</string>
    <string name="share">Share With Friends</string>
    <string name="shr">Share</string>
    <string name="share_des">App invite link will be share with your friend. Thanks for like our app. Are your sure?</string>
    <string name="share_app_message">You will be redirected to our Play Store account.\n Are you sure?</string>
<<<<<<< HEAD
    <string name="incoming_call_or_notifications">Incoming Call or Notifications</string>
    <string name="flash_alert">FLASH ALERT</string>
    <string name="flashing_to_music">FLASHING TO MUSIC</string>
    <string name="light_up_your_party">Light up your party</string>
    <string name="find_anything_in_dark">Find anything in dark</string>
    <string name="continuous">Continuous</string>
    <string name="rhythm">Rhythm</string>
    <string name="screen_light">Screen Light</string>
=======
>>>>>>> 60f676ca937c5aa0453a2918f1d3009a6b80c889
</resources>